# RustTodo

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
catr/: Cargo.toml
catr/src/: main.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
example/: Cargo.toml  file_db
example/src/: lib.rs  main.rs
example/src/business/: user.rs
example/src/database/: file_db.rs  mod.rs
findr/: Cargo.toml
findr/src/: main.rs
greprs/: Cargo.toml
greprs/src/: lib.rs  main.rs
headr/: Cargo.toml
headr/src/: main.rs
mars_calc/src/: main.rs
server/src/: main.rs  server.rs
server/src/http/: request.rs
src/: main.rs
todo-cli/: Cargo.toml
todo-cli/src/: lib.rs  main.rs
todo-cli/src/commands/: add.rs  mod.rs  remove.rs
uniqr/: Cargo.toml
uniqr/src/: main.rs
wcr/: Cargo.toml
wcr/src/: main.rs
wcr/tests/: cli.rs
