[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
cargo-expand = "1.0.88"
rand = "0.8.5"
futures = "0.3"
tokio = { version = "1.25.0", features = ["full"] }
sqlite = "0.36.1"
hyper = { version = "0.14", features = ["full"] }
